--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node scripts/start-preview.mjs"
   },
   "dependencies": {
+    "express": "^4.19.2",
     "firebase": "^12.6.0",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
