리전 업데이트

--- a/firebase.json
+++ b/firebase.json
@@ -11,7 +11,7 @@
       {
         "source": "/api/**",
         "run": {
-          "serviceId": "toh-re-api",
+          "serviceId": "toh-byvc",
           "region": "asia-northeast3"
         }
       },
