프록시 설정 업데이트
이제 ai 요청은 모두 한국 프록시를거쳐서 가도록 했음

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "site": "toh-re",
+    "site": "toh-byvc-site",
     "public": "dist",
     "ignore": [
       "firebase.json",
